a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shao_kun_deng/invalid1.min
var x : string;
var y : float;

print x + y;
